# case-study-sdd-development

./: .dockerignore  .env.example  .gitattributes  .gitignore  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.demo  Dockerfile.heroku  README.md  docker-compose.yml  flake.nix  gulpfile.js  heroku.yml  history.md  index.html  mkdocs.yml  package-lock.json  package.json  sonarqube.config.json
apps/webshop/: .coverage  .ruff.toml  Dockerfile  Dockerfile.heroku  docker-compose.yml  nginx-heroku.conf  pyproject.toml  sonar-project.properties  start.sh  tox.ini
apps/webshop/apps/inventory/: admin.py  apps.py  models.py  repositories.py  services.py  urls.py  views.py
apps/webshop/apps/orders/: apps.py  forms.py  models.py  repositories.py  services.py  staff_urls.py  views.py
apps/webshop/apps/products/: admin.py  apps.py  models.py  repositories.py  serializers.py  services.py  shop_urls.py  shop_views.py  urls.py  views.py
apps/webshop/apps/purchasing/: admin.py  apps.py  models.py  repositories.py  services.py  urls.py  views.py
apps/webshop/apps/shipping/: admin.py  apps.py  models.py  repositories.py  services.py  urls.py  views.py
apps/webshop/backend/: Dockerfile  build.gradle
apps/webshop/config/: settings.py  urls.py
apps/webshop/frontend/: .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
apps/webshop/frontend/e2e/: auth.spec.ts  customer-admin.spec.ts  customer-delivery-copy.spec.ts  (+4 more)
apps/webshop/tests/: test_smoke.py
(+1081 files in other folders)
